# mathsprompt

./: .gitignore  Cargo.toml  README.md
database/: create_tables.sql  insertion.sql
frontend/: index.html  input.html  script.js  styles.css
src/: main.rs
