[package]
name = "mathsprompt"
version = "0.1.0"
authors = ["Alex Strick van Linschoten alexstrick@fastmail.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.10"
tokio-postgres = "0.7.2"
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }
async-openai = { git = "https://github.com/64bit/async-openai" }
